Shifted combo summary to the right and fixed group price issue where they showed up erroneously

--- a/app/assets/stylesheets/order_detail.css.scss
+++ b/app/assets/stylesheets/order_detail.css.scss
@@ -111,3 +111,16 @@
 
 }
 
+.combo_cancel_summary{
+	position: relative;
+	display: inline-block;
+	left: 250px;
+}
+
+.chef_special_combo_cancel_summary{
+	position: relative;
+	display: inline-block;
+	left: 250px;
+
+}
+
