--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -264,7 +264,7 @@ header.menu_header{
 	width: 300px;
 	padding-left: 5px;
 	text-align: left;
-	border: 1px solid black;
+	border: 1px solid grey;
 
 }
 
